# invoice-reimbursement-system

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: main.py
app/api/models/: chat.py  invoice.py
app/api/routes/: chat.py  invoice.py
app/core/: config.py
app/services/: chatbot.py  invoice_processor.py  vector_store.py
app/utils/: pdf_processor.py
tests/: conftest.py  test_api_chat.py  test_api_invoice.py  test_pdf_processor.py
