[project]
name = "invoice-reimbursement-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.1.2",
    "chromadb==0.4.22",
    "fastapi==0.109.2",
    "langchain==0.1.9",
    "langchain-openai==0.0.8",
    "passlib==1.7.4",
    "pydantic>=2.7.0",
    "pydantic-settings==2.9.1",
    "pypdf==4.0.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sentence-transformers==2.5.1",
    "uvicorn==0.27.1",
]
